# prospeqt-spintax-web

./: .gitignore  ANTHROPIC_INTEGRATION_PLAN.md  ARCHITECTURE.md  BATCH_API_SPEC.md  BETA_BLOCK_FIRST_SPEC.md  BETA_PIPELINE_DEPLOYMENT.md  DEPLOY.md  DESIGN.md  DIVERSITY_GATE_SPEC.md  DIVERSITY_RETRY_FIX_PROPOSAL.md  PROMOTION_RUNBOOK.md  Procfile  README.md  REVIEW.md  REVIEW_P3.md  TEAM_QUICKSTART.md  V3_DRIFT_JACCARD_AND_V2_RETRY_SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt
.playwright/: cli.config.json
app/: api_models.py  auth.py  batch.py  config.py  dependencies.py  jobs.py  lint.py  main.py  parser.py  pipeline_dispatch.py  qa.py  spend.py  spintax_runner.py  spintax_runner_v2.py  zip_builder.py
benchmark/: local_e2e.json
qa/: p3_bugfix_report.md  p3_playwright_report.md
scripts/: benchmark.py  spintax_cli.py
static/: batch.css  batch.js  llms.txt  main.css  main.js  style.css
templates/: batch.html  docs.html  index.html  login.html
tests/: conftest.py  test_app_config.py  test_auth.py  test_batch_core.py  test_calibration_phase_a0.py  test_config_anthropic.py  test_config_responses.py  test_cost_anthropic.py  test_cost_helper.py  test_diversity_gate.py  test_failure_modes.py  test_health.py  test_jaccard_cleanup_fixtures.py  test_jobs.py  test_lint.py  test_parser_responses.py  test_qa.py  test_routes_admin.py  test_routes_batch.py  test_routes_docs.py  test_routes_lint.py  test_routes_pages.py  test_routes_qa.py  test_routes_spintax.py  test_runner_tool_dispatch.py  test_smoke.py  test_spend_cap.py  test_spintax_runner.py  (+5 more)
(+63 files in other folders)
